<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text_nl"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:id="@+id/score_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_alignParentRight="true"
            android:text="0"
            android:textSize="20sp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/textview_question_nl"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/question"
        android:layout_weight="0.38" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/button_choice1_nl"
        android:textColor="#fff" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/button_choice2_nl"
        android:textColor="#fff" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/button_choice3_nl"
        android:textColor="#fff" />

</LinearLayout>