<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_quiz_nl"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:translationY="25dp" />

        <Button
            android:id="@+id/quiz_quiz"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_quiz_nl"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/topoquiz_button"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_below="@+id/quiz_quiz"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_topoquiz_nl"
            android:textColor="@android:color/background_light" />


    </RelativeLayout>
</LinearLayout>